parsers/antlr2019/Test1/grammar/test1/parser/Calc.g4
grammar Calc;

@header {
package test1.parser;
}
lang : expr N
     ;
expr : expr '+' term
     | term
     ;
term : term '*' factor
     | factor
     ;
factor : '(' expr ')'
     | DIGIT
     ;

DIGIT : [0-9]+ ;
N : '\n';
